# ambi

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
ambi/: __init__.py  env.py  evals.py  loop.py  mcp.py  observability.py  provider.py  run_command.py  scheduler.py  sensegate.py  skills.py  store.py  tool.py  types.py  usage.py  warden.py
ambi/cli/: build.py  main.py  paths.py  system.md  system_hippocamp.md
ambi/integrations/: hippocamp.py  obsidian.py
ambi/providers/: google.py
ambi/skills/: __init__.py  obsidian.md
ambi/skills/obsidian/: tools.py
ambi/skills/shell/: SKILL.md
ambi/skills/time/: SKILL.md
ambi/transports/: telegram.py
docs/: render_demo.py
evals/scenarios/: 01_general_knowledge_no_tools.yaml  02_self_intro_no_marketing_copy.yaml  03_tool_followup_text.yaml  04_greeting_engages_not_parrots.yaml  05_decisive_no_permission_asking.yaml  06_no_robot_disclaimer.yaml  07_obsidian_list_summarizes_huge_vault.yaml  08_obsidian_list_paths_for_small_vault.yaml  09_self_metrics_intent.yaml
examples/: progress_demo.py  repl.py  telegram_bot.py
examples/skills/: shell.md
tests/: conftest.py  mock_provider.py  test_cli.py  test_evals.py  test_loop.py  test_mcp.py  test_observability.py  test_obsidian.py  test_run_command.py  test_scheduler.py  test_security.py  test_sensegate.py  test_skills.py  test_smoke_google.py  test_store.py  test_telegram.py  test_tool.py  test_usage.py  test_warden.py
